@@ -11,6 +11,8 @@ Unreleased
 - LP #418695 Bold communities for which logged in user is moderator in "My
   communities" portlet.
 
+- LP #422571 Added convert_entities function to karl.views.utils.
+
 3.13 (2009-08-26)
 -----------------
 
